--- a/package.json
+++ b/package.json
@@ -1,40 +1,40 @@
 {
-  "name": "{{projectName}}",
+  "name": "cat-energy-24",
   "private": true,
-  "description": "Личный проект «{{projectTitle}}» от HTML Academy",
+  "description": "Личный проект «Кэт энерджи» от HTML Academy",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.0.0",
     "autoprefixer": "10.4.0",
-    "browser-sync": "2.27.7",
-    "del": "^7.1.0",
+    "browser-sync": "3.0.2",
+    "del": "^6.1.1",
     "gulp": "4.0.2",
-    "gulp-dart-sass": "^1.0.2",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-libsquoosh": "^1.1.2",
+    "gulp-imagemin": "^7.1.0",
     "gulp-plumber": "1.2.1",
-    "gulp-postcss": "9.0.1",
+    "gulp-postcss": "9.1.0",
     "gulp-rename": "^2.0.0",
+    "gulp-sass": "5.1.0",
+    "gulp-sourcemaps": "3.0.0",
     "gulp-svgstore": "^9.0.0",
     "gulp-terser": "^2.1.0",
-    "gulp-webp": "^5.0.0",
+    "gulp-webp": "^4.0.1",
     "postcss": "8.3.11",
     "postcss-csso": "^6.0.1",
+    "sass": "^1.70.0",
     "stylelint": "13.13.1",
     "stylelint-config-htmlacademy": "0.1.11"
   },
   "scripts": {
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
-    "lint": "npm run editorconfig && npm run stylelint",
-    "build": "gulp styles",
+    "test": "npm run editorconfig && npm run stylelint",
+    "build": "gulp build",
     "start": "gulp"
   },
   "browserslist": [
     "last 2 versions",
     "not dead",
-    "not ie <= 11",
-    "not op_mini all",
-    "not < 0.25%"
+    "not ie <= 11"
   ],
   "editorconfig-cli": [
     "*.json",
@@ -45,7 +45,6 @@
     "source/sass/**/*.scss"
   ],
   "engines": {
-    "node": "^16"
-  },
-  "type": "module"
+    "node": "^12 || ^14"
+  }
 }
